--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
-:root {
-  --primary-color: #282e30;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
+:root {
+  --primary-text-color: #282e30;
+  --primary-secondary-color: #010409;
+  --secondary-color: ;
+  --dip-color: ;
+  --text-color: ;
+}
+
 body {
-    font-family: inter;
+  font-family: inter;
 }
