--- a/src/Components/MainApp/Hero.css
+++ b/src/Components/MainApp/Hero.css
@@ -6,112 +6,119 @@
     height: auto;
 }
 
-
-  
-
-
-
-.header {
+.Hero .header {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 100px 0 0 0;
-
-    .header-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        .heading {
-            font-size: 3.5rem;
-            font-weight: 600;
-            color: #282e30;
-            text-align: center;
-            width: 600px;
-            white-space: wrap;
-            line-height: 1.2;
-            margin: 0;
-        }
-        .sub-head{
-            font-size: 20px;
-            font-weight: 400;
-            color: #282e3088;
-            text-align: center;
-            width: 450px;
-            padding: 10px;
-        }
-
-        button {
-            background-color: #282e30;
-            border: none;
-            border-radius: 30px;
-            padding: 14px 24px;
-            color: white;
-            cursor: pointer;
-        }
-    }
-
-    .hero-image {
-        width: 100%;
-        height: 400px;
-        margin: 50px 0 0;
-        background-image: url(/Hero.JPG);
-        background-position: center;
-        background-size: cover;
-    }
-
+    
 }
+
+.Hero 
+.header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+        
+.Hero 
+.heading 
+{
+  font-size: 2rem;
+  font-weight: 600;
+  color: #282e30;
+  text-align: center;
+  white-space: wrap;
+  line-height: 1.2;
+  margin: 0;
+}
+
+.header-container
+.sub-head{
+  font-size: 1rem;
+  font-weight: 400;
+  color: #282e3088;
+  text-align: center;
+  width: 450px;
+  padding: 20px;
+}
+
+.header-container
+button {
+    background-color: #282e30;
+    border: 4px solid #e8e9e9;
+    border-radius: 30px;
+    /* box-shadow: 1px 2px 8px #282e30; */
+    padding: 20px 28px;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.hero-image {
+  width: 100%;
+  height: 400px;
+  background-image: url(/Hero.JPG);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
 
 .banner {
     width: 100%;
-    height: 70px;
-    background-color: #282e30;
+    height: 100px;
+    background-color: var(--primary-text-color);
 }
 
 .main-container {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 50px 0 0 0;
-
-    .suggestions {
-        width: 100%;
-        height: 500px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-    
-    .heading {
-        padding-left: 70px;
-    }
-
-        #box {
-            display: flex;
-            width: 550px;
-            height: 200px;
-            gap: 10px;
-            background-color: rgba(237, 238, 240, 0.445);
-            padding: 20px;
-            border-radius: 10px;
-            align-items: center;
-
-
-
-            .text span {
-                font-size: 1rem;
-                font-weight: 600;
-            }
-        }
-    }
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.suggestions {
+  width: 100%;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}    
+
+.suggestion-header {
+  display: flex;
+  text-align: start;
+  padding: 0 60px;
+}
+
+
+#box {
+  display: flex;
+  width: 550px;
+  height: 200px;
+  gap: 10px;
+background-color: rgba(237, 238, 240, 0.445);
+  padding: 20px;
+  border-radius: 10px;
+  align-items: center;
+}
+
+
+#box .text span {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+
+
 
 #box img {
     width: 170px;
@@ -124,7 +131,7 @@
 }
 .suggestion-content {
     width: 90%;
-    height: 300px;
+    height: auto;
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(2, minmax(200px, 1fr));
@@ -133,13 +140,249 @@
 }
 
 .main-content {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 100px 0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0;
+  background-color: #282e3041;
+}
+
+/* Map Styles */
+.location-select{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.location-select .heading {
+  font-size: 2rem;
+  color: var(--primary-text-color);
+  line-height: 50px;
+}
+.location-select p {
+  font-size: 1.2rem;
+  color: var(--primary-text-color);
+  margin-bottom: 20px;
+}
+.map {
+  width: 100%;
+  height: auto;
+  background-image: url(/map.jpg);
+  background-position: center;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.location {
+  width: 400px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.location::after {
+  position: absolute;
+  content: '|';
+  font-size: 3rem;
+  font-weight: 100;
+  top: 20%;
+  left: 3%;
+}
+
+.input-with-icon {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin: 10px auto;
+  display: flex;
+}
+.input-with-icon input {
+  width: 100%;
+  padding: 20px 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.input-with-icon .i{
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 13px;
+}
+.input-with-icon .r{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 20px;
+}
+.input-with-icon #flat {
+  transform: translateX(50%);
+  left: 20px;
+}
+.set-button-content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  gap: 10px;
+}
+.set-button-content button {
+  background-color: var(--primary-secondary-color);
+  color: white;
+  border: none;
+  padding: 20px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+/* features */
+.features {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+}
+.drivers {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+}
+.driver-content {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+}
+.driver-content .text-content {
+  width: 100%;
+  text-align: start;
+  padding: 0 60px;
+  font-size: 1.2rem;
+}
+.drivers .driver-content h1 {
+  font-size: 3rem;
+  color: var(--primary-text-color);
+  margin-bottom: 20px;
+  text-align: start;
+  font-weight: 700;
+}
+.driver-content .buttons {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  margin: 10px 0;
+  padding: 0 60px;
+}
+
+.driver-content .text-content p {
+  font-size: 1.2rem;
+  color: var(--primary-text-color);
+  width: 800px;
+}
+.drivers .image-content {
+  width: 90%;
+  height: 800px;
+  border-radius: 10px;
+  background-image: url(/1.jpg);
+  background-position: center;
+  background-position: cover;
+  background-size: cover;
+}
+.drivers button {
+  background-color: var(--primary-secondary-color);
+  color: white;
+  border: none;
+  padding: 20px 30px;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.agent {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+}
+.agent .agent-content {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 20px;
+}
+.agent .agent-content .text-content {
+  width: 100%;
+  text-align: start;
+  padding: 0 60px;
+  font-size: 1.2rem;
+}
+.agent .agent-content .heading {
+  font-size: 3rem;
+  color: var(--primary-text-color);
+  margin-bottom: 20px;
+  text-align: start;
+  font-weight: 700;
+}
+.agent .agent-content .buttons {
+  width: 90%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  margin: 10px 0;
+}
+.agent .agent-content p {
+  font-size: 1.2rem;
+  color: var(--primary-text-color);
+  width: 100%;
+}
+
+.agent .image-content {
+  width: 90%;
+  height: 800px;
+  border-radius: 10px;
+  background-image: url(/2.jpg);
+  background-position: center;
+  background-position: cover;
+  background-size: cover;
+}
+
+.agent button {
+  background-color: var(--primary-secondary-color);
+  color: white;
+  border: none;
+  padding: 20px 30px;
+  border-radius: 30px;
+  cursor: pointer;
 }
 
 /* Mobile Nav Styles */
