--- a/src/Components/MainApp/Hero.css
+++ b/src/Components/MainApp/Hero.css
@@ -17,10 +17,12 @@
 
 .Hero 
 .header-container {
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 100px;
 }
         
 .Hero 
@@ -71,7 +73,7 @@ button {
 .banner {
     width: 100%;
     height: 100px;
-    background-color: var(--primary-text-color);
+    background-color: rgba(237, 238, 240, 0.445);
 }
 
 .main-container {
@@ -85,11 +87,13 @@ button {
 
 .suggestions {
   width: 100%;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 600px;
+  display: grid;
+  display: -ms-grid;
+  grid-column: 1 / -1;
+  order: 0;
+  -ms-grid-row-align: center;
+  align-self: center;
   overflow: hidden;
 }    
 
@@ -99,29 +103,52 @@ button {
   padding: 0 60px;
 }
 
-
 #box {
-  display: flex;
-  width: 550px;
+  display: grid;
+  grid-template-columns: repeat(2, 300px);
+  width: 500px;
   height: 200px;
-  gap: 10px;
-background-color: rgba(237, 238, 240, 0.445);
+  background-color: rgba(237, 238, 240, 0.445);
   padding: 20px;
   border-radius: 10px;
   align-items: center;
 }
-
-
+#box .text  {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
 #box .text span {
   font-size: 1rem;
   font-weight: 600;
 }
-
-
-
-
+#box .image {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  width: 150px;
+}
 #box img {
-    width: 170px;
+    width: 130px;
+}
+#box #png-icon {
+  width: 70px;
+}
+#box .box-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  background-color: saddlebrown;
+}
+#box button {
+  background-color: white;
+  color: #282e30;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 .suggestion-header {
     width: 100%;
@@ -130,12 +157,13 @@ background-color: rgba(237, 238, 240, 0.445);
     align-items: start;
 }
 .suggestion-content {
-    width: 90%;
+    width: 100%;
     height: auto;
-    display: grid;
-    gap: 30px;
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
-    place-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    gap: 20px;
     justify-content: center;
 }
 
@@ -311,6 +339,7 @@ background-color: rgba(237, 238, 240, 0.445);
   background-position: center;
   background-position: cover;
   background-size: cover;
+  margin: 50px 0;
 }
 .drivers button {
   background-color: var(--primary-secondary-color);
@@ -342,7 +371,6 @@ background-color: rgba(237, 238, 240, 0.445);
 .agent .agent-content .text-content {
   width: 100%;
   text-align: start;
-  padding: 0 60px;
   font-size: 1.2rem;
 }
 .agent .agent-content .heading {
@@ -352,18 +380,11 @@ background-color: rgba(237, 238, 240, 0.445);
   text-align: start;
   font-weight: 700;
 }
-.agent .agent-content .buttons {
-  width: 90%;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: 20px;
-  margin: 10px 0;
-}
-.agent .agent-content p {
+
+.agent .agent-content .text-content p {
   font-size: 1.2rem;
   color: var(--primary-text-color);
-  width: 100%;
+  width: 800px;
 }
 
 .agent .image-content {
@@ -374,6 +395,16 @@ background-color: rgba(237, 238, 240, 0.445);
   background-position: center;
   background-position: cover;
   background-size: cover;
+  margin: 50px 0;
+}
+
+.agent .agent-content .buttons {
+  width: 90%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  margin: 10px 0;
 }
 
 .agent button {
@@ -383,8 +414,123 @@ background-color: rgba(237, 238, 240, 0.445);
   padding: 20px 30px;
   border-radius: 30px;
   cursor: pointer;
+  font-size: 1.5rem;
+  transition: background-color 0.3s ease;
 }
 
+/* financial section */
+
+.financial {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+}
+.financial-content {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 20px;
+}
+.financial-content .heading {
+  font-size: 3rem;
+  color: var(--primary-text-color);
+  margin-bottom: 20px;
+  text-align: start;
+  font-weight: 700;
+}
+
+.financial-content .text-content p {
+  font-size: 1.2rem;
+  color: var(--primary-text-color);
+  width: 900px;
+}
+.financial .image-content {
+  width: 90%;
+  height: 800px;
+  margin: 50px 0;
+  background-image: url(/3.jpg);
+  background-position: center;
+  background-position: cover;
+  background-size: cover;
+}
+.financial-content .buttons {
+  width: 90%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  margin: 10px 0;
+}
+.financial button {
+  background-color: var(--primary-secondary-color);
+  color: white;
+  border: none;
+  padding: 20px 30px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  transition: background-color 0.3s ease;
+}
+
+.download-option {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  background-color: #282e3041;
+}
+.download-option .heading {
+  font-size: 3rem;
+  color: var(--primary-text-color);
+  margin-bottom: 20px;
+  text-align: start;
+  font-weight: 700;
+}
+.download-content {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.d-box {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+.d-box #box {
+  display: flex;
+  width: 100%;
+  background-color: white;
+  padding: 0 30px;
+  cursor: pointer;
+}
+.d-box .download-image {
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  background-image: url(/logo.JPG);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #282e3041;
+}
+.d-box #box h3 {
+  font-size: 2.5rem;
+}
 /* Mobile Nav Styles */
 @media (max-width: 768px) {
   .nav-container {
